# google-test

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  library.cpp  library.h
test/: CMakeLists.txt  example.cpp  simple.cpp
